; ModuleID = '/home/carl/AnghaBench/freebsd/tests/sys/kern/extr_unix_passfd_test.c_getnfds.c'
source_filename = "/home/carl/AnghaBench/freebsd/tests/sys/kern/extr_unix_passfd_test.c_getnfds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CTL_KERN = common dso_local global i32 0, align 4
@KERN_PROC = common dso_local global i32 0, align 4
@KERN_PROC_NFDS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"sysctl(KERN_PROC_NFDS) failed\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @getnfds to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @getnfds() #0 {
  %1 = alloca i64, align 8
  %2 = alloca [4 x i32], align 16
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i64 4, i64* %1, align 8
  %5 = load i32, i32* @CTL_KERN, align 4
  %6 = getelementptr inbounds [4 x i32], [4 x i32]* %2, i64 0, i64 0
  store i32 %5, i32* %6, align 16
  %7 = load i32, i32* @KERN_PROC, align 4
  %8 = getelementptr inbounds [4 x i32], [4 x i32]* %2, i64 0, i64 1
  store i32 %7, i32* %8, align 4
  %9 = load i32, i32* @KERN_PROC_NFDS, align 4
  %10 = getelementptr inbounds [4 x i32], [4 x i32]* %2, i64 0, i64 2
  store i32 %9, i32* %10, align 8
  %11 = getelementptr inbounds [4 x i32], [4 x i32]* %2, i64 0, i64 3
  store i32 0, i32* %11, align 4
  %12 = getelementptr inbounds [4 x i32], [4 x i32]* %2, i64 0, i64 0
  %13 = call i32 @sysctl(i32* %12, i32 4, i32* %3, i64* %1, i32* null, i32 0)
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* %4, align 4
  %15 = icmp ne i32 %14, -1
  %16 = zext i1 %15 to i32
  %17 = call i32 @ATF_REQUIRE_MSG(i32 %16, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i32 @sysctl(i32*, i32, i32*, i64*, i32*, i32) #1

declare dso_local i32 @ATF_REQUIRE_MSG(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
